feat: fix service and add ci deployment

--- a/14-service-deployment/ansible-playbook/roles/app/tasks/main.yml
+++ b/14-service-deployment/ansible-playbook/roles/app/tasks/main.yml
@@ -50,7 +50,7 @@
   git:
     repo: "{{ repo_url }}"
     dest: "/opt/{{ app_name }}"
-    version: main
+    version: feature/service-deployment
     force: yes
   become_user: "{{ app_user }}"
 
