--- a/14-service-deployment/ansible-playbook/inventory.yml
+++ b/14-service-deployment/ansible-playbook/inventory.yml
@@ -4,7 +4,7 @@ all:
       ansible_host: 146.190.226.7
       ansible_port: 22
       ansible_user: root
-      ansible_ssh_private_key_file: "~/.ssh/test_id_rsa"
+      ansible_ssh_private_key_file: "~/.ssh/id_rsa"
       # local_ssh_key_path: "~/.ssh/id_rsa.pub"
 
   vars:
