--- a/14-service-deployment/service/package.json
+++ b/14-service-deployment/service/package.json
@@ -7,7 +7,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "basic-auth": "^2.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
