--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -1,15 +1,38 @@
-name: Deploy App to Server
+name: Build, Push and Deploy
 
 on:
   push:
-    branches: [ ]
+    branches: [ "**" ]
   workflow_dispatch:
 
 jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: ./14-service-deployment/service
+        push: true
+        tags: |
+          flensimdotcore/devops-roadmap:latest
+          flensimdotcore/devops-roadmap:${{ github.sha }}
+
   deploy:
     name: Deploy application
     runs-on: ubuntu-latest
     environment: production
+    needs: build-and-push
+    if: github.ref == 'refs/heads/main'
 
     steps:
     - name: Checkout code
