--- a/14-service-deployment/ansible-playbook/roles/app/tasks/main.yml
+++ b/14-service-deployment/ansible-playbook/roles/app/tasks/main.yml
@@ -44,7 +44,9 @@
 
 - name: Install Docker SDK for Python
   pip:
-    name: docker
+    name:
+      - docker
+      - requests
     state: present
 
 - name: Pull Docker image
