--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -47,6 +47,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install ansible
+        ansible-galaxy collection install community.docker
 
     - name: Validate Ansible playbook syntax
       run: |
