--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -47,7 +47,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install ansible
-        ansible-galaxy collection install community.docker
+        pip install requests==2.31.0
 
     - name: Validate Ansible playbook syntax
       run: |
