--- a/14-service-deployment/ansible-playbook/roles/app/tasks/main.yml
+++ b/14-service-deployment/ansible-playbook/roles/app/tasks/main.yml
@@ -49,24 +49,14 @@
       - requests
     state: present
 
-# - name: Pull Docker image
-#   community.docker.docker_image:
-#     name: "flensimdotcore/devops-roadmap"
-#     tag: "{{ image_tag }}"
-#     source: pull
-#     docker_host: "unix://var/run/docker.sock"
-
 - name: Pull Docker image
   command: "docker pull flensimdotcore/devops-roadmap:{{ image_tag }}"
 
 - name: Run Node.js container
-  docker_container:
-    name: "hello-world-app"
-    image: "flensimdotcore/devops-roadmap:{{ image_tag }}"
-    state: started
-    restart_policy: always
-    ports:
-      - "3000:3000"
-    env:
-      NODE_ENV: "production"
-    env_file: "/opt/service/.env"
+  command: 'docker run -d \
+    --name hello-world-app \
+    -p 3000:3000 \
+    --restart always \
+    -e NODE_ENV="production" \
+    --env-file /opt/service/.env \
+    flensimdotcore/devops-roadmap:{{ image_tag }}'
