--- a/14-service-deployment/ansible-playbook/roles/app/tasks/main.yml
+++ b/14-service-deployment/ansible-playbook/roles/app/tasks/main.yml
@@ -52,9 +52,12 @@
 - name: Pull Docker image
   command: "docker pull flensimdotcore/devops-roadmap:{{ image_tag }}"
 
+- name: Stop existing container
+  command: "docker stop {{ app_name }} || true && docker rm {{ app_name }} || true"
+
 - name: Run Node.js container
   command: 'docker run -d \
-    --name hello-world-app \
+    --name {{ app_name }} \
     -p 3000:3000 \
     --restart always \
     -e NODE_ENV="production" \
