--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     needs: build-and-push
-    # if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
 
     steps:
     - name: Checkout code
